--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 html{
   font-size: 62.5%;
   box-sizing: border-box;
@@ -7,11 +9,11 @@ body,
 #root{
   height: 100vh;
   margin: 0;
-}
+} 
 
-body, input, select, textarea{
+body, input, select, textarea, button{
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
 }
 
 .grid-container {
@@ -22,6 +24,10 @@ body, input, select, textarea{
   grid-template-rows: 5rem 1fr 5rem;
   grid-column: 1fr;
   height: 100%;
+}
+
+a{
+  text-decoration: none;
 }
 a:hover{
   color: #ff8000;
@@ -50,4 +56,78 @@ footer{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main{
+  flex: 3 60rem;
+}
+
+.sidebar{
+  flex: 1 20rem;
+}
+
+/* products */
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.products li{
+  flex: 0 1 29rem;
+  height: 47rem;
+  padding: 1rem;
+}
+
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.product img{
+  max-width: 37rem;
+  max-height: 37rem;
+}
+
+.product-price{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-price div,
+.product-price button{
+  text-align: center;
+  flex: 1;
+}
+
+.product-price div{
+  font-size: 2rem;
+}
+
+.button{
+  padding: 1rem;
+  border: .1rem solid #c0c0c0;
+  background-color: #f0f0f0;
+}
+
+.button:hover{
+  border: .1rem solid #808080;
+}
+
+.button.primary{
+  background-color: #f0c040;
 }
