--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-html{
+html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
 
 body,
-#root{ 
+#root {
   height: 100vh;
   margin: 0;
-} 
+}
 
-body, input, select, textarea, button{
+body,
+input,
+select,
+textarea,
+button {
   font-size: 1.6rem;
   font-family: Montserrat, Helvetica, Arial, sans-serif;
 }
 
 .grid-container {
   display: grid;
-  grid-template-areas: "header"
-  "main"
-  "footer";
+  grid-template-areas:
+    'header'
+    'main'
+    'footer';
   grid-template-rows: 5rem 1fr 5rem;
   grid-column: 1fr;
   height: 100%;
 }
 
-a{
+a {
   text-decoration: none;
 }
-a:hover{
+a:hover {
   color: #ff8000;
 }
-header{
+header {
   grid-area: header;
   display: flex;
   align-items: center;
@@ -40,16 +45,15 @@ header{
   color: white;
   padding: 1.5rem;
 }
-header a{
+header a {
   color: white;
   text-decoration: none;
-
 }
-main{
+main {
   grid-area: main;
 }
 
-footer{
+footer {
   grid-area: footer;
   background-color: #203040;
   color: white;
@@ -58,17 +62,16 @@ footer{
   align-items: center;
 }
 
-
 .content {
   display: flex;
   flex-wrap: wrap;
 }
 
-.main{
+.main {
   flex: 3 60rem;
 }
 
-.sidebar{
+.sidebar {
   flex: 1 20rem;
 }
 
@@ -84,67 +87,66 @@ footer{
   list-style-type: none;
 }
 
-.products li{
+.products li {
   flex: 0 1 29rem;
   height: 47rem;
   padding: 1rem;
 }
 
-.product{
+.product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
 
-.product img{
+.product img {
   max-width: 37rem;
   max-height: 37rem;
 }
 
-.product-price{
+.product-price {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .product-price div,
-.product-price button{
+.product-price button {
   text-align: center;
   flex: 1;
 }
 
-.product-price div{
+.product-price div {
   font-size: 2rem;
 }
 
-.button{
+.button {
   padding: 1rem;
-  border: .1rem solid #c0c0c0;
+  border: 0.1rem solid #c0c0c0;
   background-color: #f0f0f0;
 }
 
-.button:hover{
-  border: .1rem solid #808080;
+.button:hover {
+  border: 0.1rem solid #808080;
 }
 
-.button.primary{
+.button.primary {
   background-color: #f0c040;
 }
 
 /* Filter */
-.filter{
+.filter {
   display: flex;
   justify-content: space-between;
   padding: 1rem;
   margin: 1rem;
-  border-bottom: .1rem #c0c0c0 solid;
+  border-bottom: 0.1rem #c0c0c0 solid;
 }
 
-.filter div{
+.filter div {
   flex: 1;
 }
-
 
 /* Cart */
 .cart {
@@ -153,8 +155,8 @@ footer{
   display: flex;
 }
 
-.cart-header{
-  border-bottom: .1rem solid #c0c0c0;
+.cart-header {
+  border-bottom: 0.1rem solid #c0c0c0;
 }
 
 .cart-items {
@@ -171,26 +173,26 @@ footer{
   display: flex;
 }
 
-.cart-items li div{
-  padding: .5rem;
+.cart-items li div {
+  padding: 0.5rem;
 }
 
-.cart-items li div:last-child{
+.cart-items li div:last-child {
   flex: 1;
 }
 
-.right{
+.right {
   text-align: right;
 }
 
-.total{
+.total {
   display: flex;
   justify-content: space-between;
   width: 100%;
   align-items: center;
 }
 
-.total > div{
+.total > div {
   font-size: 2rem;
 }
 
@@ -201,7 +203,7 @@ footer{
 
 /* Checkout form*/
 
-form{
+form {
   width: 100%;
 }
 
@@ -211,13 +213,40 @@ form{
   list-style-type: none;
 }
 
-.form-container li{
+.form-container li {
   display: flex;
   flex-direction: column;
   padding: 1rem;
 }
 
-input{
+input {
   padding: 1rem;
-  border: .1rem solid #c0c0c0;
+  border: 0.1rem solid #c0c0c0;
+}
+
+/* Product Details */
+
+.product-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-height: 96vh;
+}
+
+.product-details img {
+  max-height: 100vh;
+  max-width: 46rem;
+  margin: 0 auto;
+}
+
+.product-details-description {
+  flex: 1 1;
+  margin: 1rem;
+}
+
+.close-modal {
+  position: absolute;
+  right: 1rem;
+  top: 2.5rem;
+  z-index: 999;
 }
